# kleinanzeigen-api

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/kleinanzeigen_api/: __init__.py  auth.py  categories.py  cli.py  client.py
src/kleinanzeigen_api/data/: categories.json
tests/: test_auth.py  test_authenticated.py  test_categories.py  test_cli.py  test_locations_metadata.py  test_parsing.py  test_search.py
