[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kleinanzeigen-api"
dynamic = ["version"]
description = "Unofficial Python client + CLI for kleinanzeigen.de (Germany): search any category and get structured listing data (GPS, attributes, prices, images)."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "monkrel", email = "dev.monkrel@gmail.com" }]
keywords = ["kleinanzeigen", "ebay-kleinanzeigen", "api", "scraping", "germany", "classifieds", "rentals"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "curl_cffi>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/monkrel/kleinanzeigen-api"
Repository = "https://github.com/monkrel/kleinanzeigen-api"
Issues = "https://github.com/monkrel/kleinanzeigen-api/issues"

[project.scripts]
kleinanzeigen-api = "kleinanzeigen_api.cli:main"

[tool.hatch.version]
path = "src/kleinanzeigen_api/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/kleinanzeigen_api"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
